# sartre

./: .gitignore  NOTICE  README.md  binary-artifact-repo-design.md  pyproject.toml  shell.nix
.claude/agents/: tla-verifier.md
.claude/skills/openspec-preview/: SKILL.md
.claude/skills/tla-audit/: SKILL.md
.claude/skills/tla-model/: SKILL.md
.claude/skills/tla-verify/: SKILL.md
.claude/skills/tla-verify/scripts/: run_tlc.sh
openspec/changes/add-core-ports/: design.md  tasks.md
openspec/changes/add-core-ports/specs/artifact-model/: spec.md
openspec/changes/add-core-ports/specs/blob-store/: spec.md
openspec/changes/add-core-ports/specs/filesystem-view/: spec.md
openspec/changes/add-core-ports/specs/path-model/: spec.md
openspec/changes/add-core-ports/specs/registry-port/: spec.md
openspec/changes/add-publish-transaction/: design.md
openspec/changes/add-publish-transaction/model/: Publish_buggy.cfg  Publish_fixed.cfg
openspec/changes/add-publish-transaction/specs/publish-transaction/: spec.md
openspec/changes/archive/2026-06-17-add-core-ports/: proposal.md
openspec/changes/archive/2026-06-17-add-core-ports/specs/repository-facade/: spec.md
openspec/changes/archive/2026-06-17-add-publish-transaction/: proposal.md  tasks.md
openspec/changes/archive/2026-06-17-add-publish-transaction/model/: README.md
openspec/changes/archive/2026-06-17-define-version-id/: tasks.md
openspec/changes/archive/2026-06-17-define-version-id/specs/artifact-model/: spec.md
openspec/changes/define-version-id/: design.md  proposal.md  tasks.md
openspec/changes/define-version-id/specs/registry-port/: spec.md
openspec/changes/define-version-id/specs/version-log/: spec.md
openspec/specs/artifact-model/: spec.md
openspec/specs/blob-store/: spec.md
openspec/specs/filesystem-view/: spec.md
openspec/specs/path-model/: spec.md
openspec/specs/publish-transaction/: spec.md
openspec/specs/publish-transaction/model/: Publish.tla
openspec/specs/registry-port/: spec.md
openspec/specs/repository-facade/: spec.md
openspec/specs/version-log/: spec.md
src/sartre/: __init__.py  errors.py  fs.py  hashing.py  model.py  paths.py  ports.py  repository.py  store.py
tests/: test_hashing.py  test_interfaces.py  test_manifest_version.py  test_model.py  test_paths.py
