[project]
name = "sartre"
version = "0.1.0"
description = "Sartre: Simple ARTifact REpository — a content-addressed versioned binary artifact repository (manifest plane + blob plane)."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
    { name = "Vic Putz", email = "vputz@protonmail.com" }
]
requires-python = ">=3.12"
# fsspec is core: it is the filesystem abstraction used on both ends — as the
# read-only SnapshotFS view and as the FsspecBlobBackend over any fs. It is
# small and pure-Python. Heavy concrete backends live in the extras below.
dependencies = [
    "fsspec>=2024.0",
]

# Optional backends. The reference read core (head/resolve/open) is designed to
# run against a local-filesystem stub with no extra deps; the Delta + S3 backend
# pulls these in. See binary-artifact-repo-design.md.
[project.optional-dependencies]
delta = [
    "deltalake>=0.18",
    "pyarrow>=16",
]
s3 = [
    "boto3>=1.34",
    "s3fs>=2024.0",
]
gcs = [
    "gcsfs>=2024.0",
]

[build-system]
requires = ["uv_build>=0.11.17,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "pyright>=1.1.390",
]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "standard"
